BE-4, added users travels list
