# app/Http/Controllers/TravelController.php
@@ -5,13 +5,16 @@ namespace App\Http\Controllers;
 
 use App\Http\DTOs\TravelStoreDTO;
 use App\Http\Requests\Travel\TravelDeleteRequest;
+use App\Http\Requests\Travel\TravelListRequest;
 use App\Http\Requests\Travel\TravelShowRequest;
 use App\Http\Requests\Travel\TravelStoreRequest;
 use App\Http\Requests\Travel\TravelUpdateRequest;
+use App\Http\Resources\TravelListResource;
 use App\Http\Resources\TravelShowResource;
 use App\Http\Responses\PaginatedResponse;
 use App\Models\Friend;
 use App\Models\Travel;
+use App\Models\User;
 use App\Services\TravelService;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -83,7 +86,7 @@ class TravelController extends BaseController
         ],
         responses: [
             new OA\Response(
-                response: 201,
+                response: 200,
                 description: 'Travel returned successfully',
                 content: new OA\JsonContent(
                     properties: [
@@ -173,7 +176,7 @@ class TravelController extends BaseController
         tags: ['Travels'],
         responses: [
             new OA\Response(
-                response: 201,
+                response: 200,
                 description: 'Travel created successfully',
                 content: new OA\JsonContent(
                     properties: [
@@ -297,7 +300,7 @@ class TravelController extends BaseController
         ],
         responses: [
             new OA\Response(
-                response: 201,
+                response: 200,
                 description: 'Travel updated successfully',
                 content: new OA\JsonContent(
                     properties: [
@@ -412,6 +415,58 @@ class TravelController extends BaseController
         return response()->json(['message' => 'Travel deleted successfully']);
     }
 
+    #[OA\Get(
+        path: '/api/travels/user/{user}',
+        description: 'Show travels of specified user.',
+        summary: 'Show travels of specified user',
+        security: [['sanctum' => []]],
+        tags: ['Travels'],
+        parameters: [
+            new OA\Parameter(
+                name: 'user',
+                description: 'User ID',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(type: 'integer', example: 1)
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Travel returned successfully',
+                content: new OA\JsonContent(
+                    type: 'array',
+                    items: new OA\Items(
+                        properties: [
+                            new OA\Property(property: 'id', description: 'ID of the travel', type: 'integer', example: 1),
+                            new OA\Property(property: 'name', description: 'Name of the travel', type: 'string', example: 'Mountain Adventure'),
+                            new OA\Property(property: 'description', description: 'Description of the travel', type: 'string', example: 'A trip to explore the mountains'),
+                            new OA\Property(property: 'from', description: 'Start date of the travel', type: 'string', format: 'date', example: '2024-12-01'),
+                            new OA\Property(property: 'to', description: 'End date of the travel', type: 'string', format: 'date', example: '2024-12-10'),
+                            new OA\Property(property: 'longitude', description: 'Longitude of the location', type: 'number', format: 'float', example: 23.634501),
+                            new OA\Property(property: 'latitude', description: 'Latitude of the location', type: 'number', format: 'float', example: -102.552784),
+                            new OA\Property(property: 'favourite', description: 'Whether the travel is marked as favourite', type: 'boolean', example: true),
+                            new OA\Property(property: 'created', description: 'Record creation', type: 'string', example: 'One minute ago'),
+                        ]
+                    )
+                )
+            ),
+            new OA\Response(
+                response: 401,
+                description: 'Unauthorized',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'message', type: 'string', example: 'Unauthenticated.')
+                    ]
+                )
+            )
+        ]
+    )]
+    public function usersTravels(TravelListRequest $request, User $user): JsonResponse
+    {
+        return PaginatedResponse::format($user->travels()->paginate(10), TravelListResource::class);
+    }
+
     #[OA\patch(
         path: '/api/travels/{travel}/toggle-favourite',
         summary: 'Toggle favourite',
@@ -428,7 +483,7 @@ class TravelController extends BaseController
         ],
         responses: [
             new OA\Response(
-                response: 201,
+                response: 200,
                 description: 'Travel updated successfully',
                 content: new OA\JsonContent(
                     properties: [
